tests/semantics/invalid/bad_return_type.s23
int pi();

code pi {
    return 3.14;
}